fix data action and scraffolding scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Kodchasan&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
 @font-face {
   font-family: "Proxima Nova";
   src: local("Proxima Nova"), url("./fonts/regular.otf") format("opentype");
 }
 
+::-webkit-scrollbar {
+  width: 1rem;
+  background-color: #121212;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #232323;
+  width: 1rem;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  width: 1rem;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  background: rgb(252, 252, 169);
+  background: linear-gradient(
+    0deg,
+    rgba(252, 252, 169, 1) 0%,
+    rgba(248, 91, 124, 1) 100%
+  );
+}
 html {
   overflow-x: hidden;
 }
